@@ -7,11 +7,12 @@
 	(broken).
 
 	Updated/fixed packages: barebox, directfb, libsoup,
-	libxml-parser-perl, mtd, python, ti-utils, udev, usbmount,
-	util-linux, xfont_font-misc-misc
+	libxml-parser-perl, mtd, ncurses, python, ti-utils, udev,
+	usbmount, util-linux, xfont_font-misc-misc
 
 	Issues resolved (http://bugs.uclibc.org):
 
+	#3685: ncurses installation hangs due to old version of tic
 	#4093: Grub fails to install bz2 patch after conversion to...
 
 2011.08-rc1, Released August 4th, 2011:
